Fix: horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
